--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,15 +7,13 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
     ports:
-      - "5173:5173"
+      - "5199:5173"
 
   server:
     restart: always
     container_name: "template-server"
     build:
       context: ./backend
-      dockerfile: Dockerfile
+      dockerfile: dockerfile
     ports:
-      - "8080:8080"
-    environment:
-      - PORT=8080
+      - "9090:8080"
